--- a/AuthNow/AuthNow.csproj
+++ b/AuthNow/AuthNow.csproj
@@ -85,6 +85,14 @@
       <HintPath>..\packages\Microsoft.Owin.Security.Twitter.3.1.0\lib\net45\Microsoft.Owin.Security.Twitter.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAzure.SDK.2.9.0\lib\Microsoft.WindowsAzure.Diagnostics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.ServiceRuntime, Version=2.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAzure.SDK.2.9.0\lib\Microsoft.WindowsAzure.ServiceRuntime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -146,6 +154,14 @@
       <Private>True</Private>
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsAzureEventSource, Version=2.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAzure.SDK.2.9.0\lib\WindowsAzureEventSource.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="WindowsAzureTelemetryEvents, Version=2.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAzure.SDK.2.9.0\lib\WindowsAzureTelemetryEvents.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -179,8 +195,10 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CampaignsController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
+    <Compile Include="Controllers\DonorsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\TransactionsController.cs" />
     <Compile Include="Controllers\usersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -205,12 +223,39 @@
     <Compile Include="Migrations\201801271737393_UserPhoto.Designer.cs">
       <DependentUpon>201801271737393_UserPhoto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802040530163_CurrentAmount field.cs" />
+    <Compile Include="Migrations\201802040530163_CurrentAmount field.Designer.cs">
+      <DependentUpon>201802040530163_CurrentAmount field.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802070729197_Donor model.cs" />
+    <Compile Include="Migrations\201802070729197_Donor model.Designer.cs">
+      <DependentUpon>201802070729197_Donor model.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802070740515_Transaction model.cs" />
+    <Compile Include="Migrations\201802070740515_Transaction model.Designer.cs">
+      <DependentUpon>201802070740515_Transaction model.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802130603478_number of donations.cs" />
+    <Compile Include="Migrations\201802130603478_number of donations.Designer.cs">
+      <DependentUpon>201802130603478_number of donations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802230803101_%27First and Last name%27.cs" />
+    <Compile Include="Migrations\201802230803101_%27First and Last name%27.Designer.cs">
+      <DependentUpon>201802230803101_%27First and Last name%27.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802240842531_User_Id property to campaign table.cs" />
+    <Compile Include="Migrations\201802240842531_User_Id property to campaign table.Designer.cs">
+      <DependentUpon>201802240842531_User_Id property to campaign table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Campaign.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Donor.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Transaction.cs" />
+    <Compile Include="Models\UserViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -227,6 +272,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\grinlite - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -289,6 +335,16 @@
     <Content Include="Views\Shared\_AuthUsersLayoutPage.cshtml" />
     <Content Include="Views\Shared\_NavBarPartial.cshtml" />
     <Content Include="Views\users\Index.cshtml" />
+    <Content Include="Views\Donors\Create.cshtml" />
+    <Content Include="Views\Donors\Delete.cshtml" />
+    <Content Include="Views\Donors\Details.cshtml" />
+    <Content Include="Views\Donors\Edit.cshtml" />
+    <Content Include="Views\Donors\Index.cshtml" />
+    <Content Include="Views\Transactions\Create.cshtml" />
+    <Content Include="Views\Transactions\Delete.cshtml" />
+    <Content Include="Views\Transactions\Details.cshtml" />
+    <Content Include="Views\Transactions\Edit.cshtml" />
+    <Content Include="Views\Transactions\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -317,6 +373,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801271737393_UserPhoto.resx">
       <DependentUpon>201801271737393_UserPhoto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802040530163_CurrentAmount field.resx">
+      <DependentUpon>201802040530163_CurrentAmount field.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802070729197_Donor model.resx">
+      <DependentUpon>201802070729197_Donor model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802070740515_Transaction model.resx">
+      <DependentUpon>201802070740515_Transaction model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802130603478_number of donations.resx">
+      <DependentUpon>201802130603478_number of donations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802230803101_%27First and Last name%27.resx">
+      <DependentUpon>201802230803101_%27First and Last name%27.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802240842531_User_Id property to campaign table.resx">
+      <DependentUpon>201802240842531_User_Id property to campaign table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
